--- a/src/app/prs/review/review-list/review-list.component.html
+++ b/src/app/prs/review/review-list/review-list.component.html
@@ -16,6 +16,7 @@
       <td><a (click) ="sortBy('status')">Status</a></td>
       <td><a (click) ="sortBy('total')">Total</a></td>
       <td><a (click) ="sortBy('userId')">User</a></td>
+      <td>Action</td>
 
     </tr>
     <tr *ngFor = "let request of requests">
@@ -24,30 +25,14 @@
       <td>{{request.status}}</td>
       <td>{{request.total}}</td>
       <td>{{request.user.username}}</td>
+      <td>
+        <span class="actions">
+          <a routerLink="/requests/review/item">REVIEW</a> 
+        </span>
+      </td>
     </tr>
   </table>
 </div>
 
-<div>
-  <table class="table table-sm">
-    <tr class="tableheader">
-      <td hidden>Id</td>
-      <td>Product</td>
-      <td>Quantity</td>
-      <td>Price</td>
-      <td>Subtotal</td>
-      <td>Action</td>
-    </tr>
-    <tr *ngFor = "let line of requestlines">
-      <td hidden>{{line.id}}</td>
-      <td>{{line.product.name}}</td>
-      <td>{{line.quantity}}</td>
-      <td>{{line.product.price | currency}} </td>
-      <td>{{line.product.price * line.quantity | currency}}</td>
-    </tr>
 
-  </table>
-  <span><button (click)="approve()" class="btn btn-primary">APPROVED</button> | </span>
-  <span><button (click)="reject()" class="btn btn-primary">REJECTED</button></span>
 
-</div>
