request line delete- not functioning

--- a/src/app/prs/product/product-edit/product-edit.component.html
+++ b/src/app/prs/product/product-edit/product-edit.component.html
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <td>Vendor Id:</td>
-        <td><input [(ngModel)]="product.vendorid" type="text"></td>
+        <td><input [(ngModel)]="product.vendorId" type="text"></td>
       </tr>
 
       </table>
