--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <td>Delivary Mode:</td>
-        <td><input [(ngModel)]="request.delivaryMode" type="text"></td>
+        <td><input [(ngModel)]="request.deliveryMode" type="text"></td>
       </tr>
       <tr>
         <td>Status:</td>
