--- a/src/app/prs/requestLine/requestline-detail/requestline-detail.component.html
+++ b/src/app/prs/requestLine/requestline-detail/requestline-detail.component.html
@@ -1,14 +1,14 @@
 <app-menu></app-menu>
-
 <div class="component">
   <div class="header">
-    <span class="pagetitle">REQUESTLINE CREATE</span> 
+    <span class="pagetitle" >REQUESTLINE CREATE</span> 
+    <!-- <span [(ngModel)]="_loggedInUsername" type="text" hidden></span> -->
   </div>
   
   <table class="table table-sm">
     <tr>
-      <td hidden>Id</td>
-      <td hidden><input [(ngModel)]="requestline.id" type="text" disabled></td>
+      <td>Id</td>
+      <td><input [(ngModel)]="requestline.id" type="text" disabled></td>
     </tr>
     <tr>
       <td>Product</td>
