css home and about

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,14 +1,60 @@
 <app-menu></app-menu>
 
-<h1>Purchase Request System</h1>
-<body>
-    <span>
-       
-    </span>
-</body>
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">Purchase Request System (PRS) is copyright (c) 2019 Lidya Tsegay all rights reserved.</span>
-    </div>
-</footer>
+
+<div class ="home">
+ 
+    <body>
+        <span>
+            <h1 class="border border-primary">Purchase Request System</h1>
+            <h4 class="border border-primary">Boot-camp Tools</h4>
+            <table id = "tech" class= "table tectable">
+                    <thead>
+                        <tr>
+                            <th>Technology</th> 
+                            <th>Description</th>
+                            <th>Comment</th> 
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Git/GitHub</td>
+                            <td>Source Code Management System</td>
+                            <td>Excelent tool and is being widely adopted in the programing world</td>
+                        </tr>
+                        <tr>
+                            <td>SQL</td>
+                            <td>Relational Database Management System</td>
+                            <td>Provides excellent data management</td>
+                         </tr>
+                        <tr>
+                            <td>C#</td>
+                            <td>Programming Language</td>
+                            <td>Easy to learn and continued addition of featured</td>
+                         </tr>
+                        <tr>
+                            <td>HTML/CSS/JS</td>
+                            <td>Provides the basic Structure of Sites</td>
+                            <td>Must know to program on the web</td>
+                         </tr>
+                        <tr>
+                            <td>Angular</td>
+                            <td>JavaScript-based Open-Source Front-end Web Framework</td>
+                            <td>This program is IT for web programming</td>
+                         </tr>
+    
+                    </tbody>
+                    <tfoot></tfoot>
+                </table>
+                <hr> 
+        </span>
+    </body>
+    
+</div>
+<div>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span class="text-muted">Purchase Request System (PRS) is copyright (c) 2019 Lidya Tsegay all rights reserved.</span>
+        </div>
+    </footer>
+</div>
