--- a/src/app/prs/requestLine/requestline-detail/requestline-detail.component.html
+++ b/src/app/prs/requestLine/requestline-detail/requestline-detail.component.html
@@ -8,15 +8,15 @@
   <table class="table table-sm">
     <tr>
       <td>Id</td>
-      <td><input [(ngModel)]="requestline.id" type="text" disabled></td>
+      <td><input [(ngModel)]="product.id" type="text" disabled></td>
     </tr>
     <tr>
       <td>Product</td>
-      <td><input [(ngModel)]="requestline.product.name" type="text"></td>
+      <td><input [(ngModel)]="product.id" type="text"></td>
     </tr>
     <tr>
       <td>Quantity</td>
-      <td><input [(ngModel)]="requestline.quantity" type="text"></td>
+      <td><input [(ngModel)]="product.quantity" type="text"></td>
     </tr>
 
   </table>
